--- a/calc.html
+++ b/calc.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
   <head>
+	<meta charset="UTF-8">
 	<title>Calculator</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-  	<input type="text" class="lcd">
+  	<input type="text" id="lcd" value="" />
 	<div class="button">
-	   <input value="7" type="button">
-	   <input value="8" type="button">
-	   <input value="9" type="button">
-	   <input value="/" type="button">
+	   <input value="7" type="button" onclick="append(this.value)" />
+	   <input value="8" type="button" onclick="append(this.value)" />
+	   <input value="9" type="button" onclick="append(this.value)" />
+	   <input value="/" type="button" onclick="operate(this.value)" />
 	</div>
 	<div class="button">
-	   <input value="4" type="button">
-	   <input value="5" type="button">
-	   <input value="6" type="button">
-	   <input value="*" type="button">
+	   <input value="4" type="button" onclick="append(this.value)"/>
+	   <input value="5" type="button" onclick="append(this.value)" />
+	   <input value="6" type="button" onclick="append(this.value)" />
+	   <input value="*" type="button" onclick="operate(this.value)" />
 	</div>
 	<div class="button">
-	   <input value="1" type="button">
-	   <input value="2" type="button">
-	   <input value="3" type="button">
-	   <input value="-" type="button">
+	   <input value="1" type="button" onclick="append(this.value)" />
+	   <input value="2" type="button" onclick="append(this.value)" />
+	   <input value="3" type="button" onclick="append(this.value)" />
+	   <input value="-" type="button" onclick="operate(this.value)" />
 	</div>
 	<div class="button">
-	   <input value="0" type="button">
-	   <input value="C" type="button">
-	   <input value="=" type="button">
-	   <input value="+" type="button">
+	   <input value="0" type="button" onclick="append(this.value)" />
+	   <input value="C" type="button" onclick="clearit()" />
+	   <input value="=" type="button" onclick="getresult()" />
+	   <input value="+" type="button" onclick="operate(this.value)" />
 	</div>
 	<script type="text/javascript" src="calc.js"></script>
   </body>
